Added registration page

--- a/TrainingMonitorFrontend/src/app/components/home/home.component.html
+++ b/TrainingMonitorFrontend/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="user">
-    <h1>Welcome, {{ user?.name }} {{ user?.surname }}</h1>
-    <p>Email: {{ user?.email }}</p>
-    <p>Gender: {{ user?.gender }}</p>
+    <h1>Welcome, {{ user.name }} {{ user.surname }}</h1>
+    <p>Email: {{ user.email }}</p>
+    <p>Gender: {{ user.gender }}</p>
 
     <h2>Your Trainings</h2>
     <ul>
