--- a/TrainingMonitorFrontend/src/app/components/home/home.component.html
+++ b/TrainingMonitorFrontend/src/app/components/home/home.component.html
@@ -1,21 +1,37 @@
-<div *ngIf="user">
-    <h1>Welcome, {{ user.name }} {{ user.surname }}</h1>
-    <p>Email: {{ user.email }}</p>
-    <p>Gender: {{ user.gender }}</p>
-
-    <h2>Your Trainings</h2>
-    <ul>
-        <li *ngFor="let training of user?.trainings">
-            <strong>ID:</strong> {{ training.id }}<br>
-            <strong>Date and Time:</strong> {{ training.trainingDateTime | date:'yyyy-MM-dd HH:mm' }}<br>
-            <strong>Intensity:</strong> {{ training.intensity }}<br>
-            <strong>Fatigue:</strong> {{ training.fatigue }}<br>
-            <strong>Duration:</strong> {{ training.durationInMinutes }} minutes<br>
-            <strong>Calories Spent:</strong> {{ training.caloriesSpent }}<br>
-            <strong>Type:</strong> {{ training.trainingType }}<br>
-        </li>
-    </ul>
-</div>
-<div *ngIf="!user">
-    <p>Loading user data...</p>
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div *ngIf="user">
+                <div class="text-center mb-4">
+                    <h2>Welcome, {{ user.name }} {{ user.surname }}</h2>
+                </div>
+                <h3 class="text-center mb-4">Your Trainings</h3>
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>Date and Time</th>
+                            <th>Intensity</th>
+                            <th>Fatigue</th>
+                            <th>Duration</th>
+                            <th>Calories Spent</th>
+                            <th>Type</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let training of user?.trainings">
+                            <td>{{ training.trainingDateTime | date:'yyyy-MM-dd HH:mm' }}</td>
+                            <td>{{ training.intensity }}</td>
+                            <td>{{ training.fatigue }}</td>
+                            <td>{{ training.durationInMinutes }} minutes</td>
+                            <td>{{ training.caloriesSpent }}</td>
+                            <td>{{ training.trainingType }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div *ngIf="!user" class="text-center">
+                <p>Loading user data...</p>
+            </div>
+        </div>
+    </div>
 </div>
