--- a/TrainingMonitorFrontend/src/app/components/registration/registration.component.html
+++ b/TrainingMonitorFrontend/src/app/components/registration/registration.component.html
@@ -61,7 +61,7 @@
                 </button>
             </div>
             <div class="mt-3">
-                <a [routerLink]="['/login']">Already have an account? Login here</a>
+                <p class="mt-3">Already have an account?  <a [routerLink]="['/login']">Login here</a></p>
             </div>
         </form>
     </div>
