New training page added

--- a/TrainingMonitorFrontend/src/app/components/header/header.component.html
+++ b/TrainingMonitorFrontend/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
             <a class="nav-link" href="/">Home</a>
         </li>
         <li *ngIf="isLoggedIn()" class="nav-item">
-            <a class="nav-link" href="/add-training">Add Training</a>
+            <a class="nav-link" href="/new-training">Add Training</a>
         </li>
         <li *ngIf="isLoggedIn()" class="nav-item">
             <a class="nav-link" href="/training-report">Training Report for Month</a>
