--- a/TrainingMonitorFrontend/src/app/components/header/header.component.html
+++ b/TrainingMonitorFrontend/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="/new-training">Add Training</a>
         </li>
         <li *ngIf="isLoggedIn()" class="nav-item">
-            <a class="nav-link" href="/training-report">Training Report for Month</a>
+            <a class="nav-link" href="/monthly-report">Training Report</a>
         </li>
         <li *ngIf="!isLoggedIn()" class="nav-item">
             <a class="nav-link" href="/login">Login</a>
