--- a/TrainingMonitorFrontend/src/app/components/home/home.component.html
+++ b/TrainingMonitorFrontend/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div>
             <div *ngIf="user">
                 <div class="text-center mb-4">
                     <h2>Welcome, {{ user.name }} {{ user.surname }}</h2>
@@ -16,6 +16,7 @@
                                 <th>Duration</th>
                                 <th>Calories Spent</th>
                                 <th>Type</th>
+                                <th style="width: 30%;">Notes</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -26,6 +27,17 @@
                                 <td>{{ training.durationInMinutes }} minutes</td>
                                 <td>{{ training.caloriesSpent }}</td>
                                 <td>{{ training.trainingType }}</td>
+                                <td *ngIf="training.additionalNotes; else noNotes"  class="text-center">
+                                    <button class="btn btn-link" type="button" data-bs-toggle="collapse"
+                                        [attr.data-bs-target]="'#collapse' + training.id">
+                                        View Notes
+                                    </button>
+                                    <div [attr.id]="'collapse' + training.id" class="collapse">
+                                        <div class="card card-body">
+                                            {{ training.additionalNotes || 'No notes available' }}
+                                        </div>
+                                    </div>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -40,4 +52,7 @@
 
 <ng-template #noTrainings>
     <h3 class="text-center mb-4">You have no recorded trainings</h3>
+</ng-template>
+<ng-template #noNotes>
+    <td class="text-center mb-4">No notes</td>
 </ng-template>
